# undox

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml  rust-toolchain.toml  undox.yaml
.github/workflows/: docs.yml  release.yml
content/: index.md
content/getting-started/: quickstart.md
content/guide/: content.md
docs/content/: index.md
docs/content/getting-started/: installation.md  quickstart.md
docs/content/guide/: configuration.md  content.md  multi-repo.md  syntax-highlighting.md
docs/content/images/: logo.txt
src/: build.rs  commands.rs  config.rs  git.rs  main.rs  theme.rs  util.rs
src/commands/: build.rs  clean.rs  init.rs  serve.rs
src/config/: load.rs  mod.rs  resolve.rs  types.rs
themes/default/: undox-theme.yaml  undox.yaml
themes/default/docs/: icons.md  index.md  macros.md  settings.md
themes/default/templates/: base.html  macros.html  page.html
