[package]
name = "undox"
version = "0.1.2"
description = "A static site generator for multi-repo documentation"
repository = "https://github.com/undox-rs/undox"
homepage = "https://undox.dev"
readme = "README.md"
keywords = ["documentation", "static-site", "markdown"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Michelle Tilley <michelle@michelletilley.net>"]
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "color"] }
config = "0.15.19"
git2 = { version = "0.20.3", features = ["https", "ssh"] }
pulldown-cmark = "0.13"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
tera = "1.20"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }

# Syntax highlighting (batteries-included tree-sitter wrapper)
autumnus = "0.7"

# Search indexing
pagefind = "1.5.0-alpha.2"

# Dev server
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
open = "5"

# File watching
notify = "8"
notify-debouncer-full = "0.5"

# SSE live reload
async-stream = "0.3"
futures-util = "0.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
